--- a/EJERCICIOS/2. MODELO_RELACIONAL.md
+++ b/EJERCICIOS/2. MODELO_RELACIONAL.md
@@ -1,6 +1,8 @@
 Ejercicio #1
 
 Una empresa vende productos a sus clientes, se necesita conocer los datos personales de los clientes (Nombre, apellido, identificación, dirección y fecha de nacimiento) cada producto tiene un nombre y un código, así como un  precio unitario. Un cliente puede comprar varios productos a la empresa y un mismo producto puede ser comprado por varios clientes, los productos son suministrados por diferentes proveedores. Se debe tener en cuenta que un producto solo puede ser suministrado por un proveedor y que un proveedor puede suministrar diferentes productos, de cada proveedor se desea conocer el NIT, nombre y dirección. 
+![image](https://user-images.githubusercontent.com/125502848/234967182-e51703fe-8c26-48f8-a978-93b6b6991df8.png)
+
 
 Ejercicio #1
 
